--- a/ArticleTemplates/assets/scss/tones/_tone--podcast.scss
+++ b/ArticleTemplates/assets/scss/tones/_tone--podcast.scss
@@ -13,6 +13,13 @@
         }
     }
 
+    .audio-player__container,
+    .audio-player__wrapper,
+    .section__container {
+        position: relative;
+        z-index: 1;
+    }
+
     .audio-player__button {
         &.touchpoint--primary .touchpoint__button {
             background-color: color(tone-podcast);
@@ -26,6 +33,10 @@
 
     .audio-player__slider__knob {
         background-color: color(tone-podcast);
+    }
+
+    .section__container {
+        background-color: color(shade-6);
     }
 
     .article {
@@ -83,7 +94,7 @@
             background-color: darken(color(shade-6), 5%);
 
             .cutout__container {
-                background-color: color(shade-6);
+                background-color: transparent;
             }
         }
     }
